# Sqlite_Fetchcontent_template

./: CMakeLists.txt  README.md
src/: main.cpp
